# MyMinimind

./: .gitignore  README.md  pyproject.toml  requirements.txt
model/: minimind_config.py  minimind_model.py
myminimind/config/: __init__.py  load.py  schema.py
myminimind/data/: lm_dataset.py
myminimind/eval/: eval_llm.py
myminimind/model/: __init__.py  configuration_myminimind.py  minimind_config.py  minimind_model.py  modular_myminimind.py
myminimind/training/: train_distillation.py  train_dpo.py  train_full_sft.py  train_grpo.py  train_pretrain.py
myminimind/utils/: logger.py  train_utils.py
scripts/: train_pretrain.sh
tests/: datasets_test.py  model_test.py  swanlab_test.py
